--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,10 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
-dependencies = []
+dependencies = [
+    "fastapi>=0.116.1",
+    "uvicorn[standard]>=0.33.0",
+]
 
 [project.optional-dependencies]
 dev = [
