--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,56 +1,17 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [project]
 name = "the-void"
 version = "0.1.0"
-description = ""
-authors = [
-    {name = "0xSpuddy"}
-]
-readme = "README.md"
+description = "A Python project"
+authors = [{name = "Your Name", email = "your.email@example.com"}]
 requires-python = ">=3.8"
-classifiers = [
-    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-]
-dependencies = [
-    "fastapi>=0.116.1",
-    "uvicorn[standard]>=0.33.0",
-]
-
-[project.optional-dependencies]
-dev = [
-    "pytest",
-    "black",
-    "isort",
-    "flake8",
-    "mypy",
-]
+dependencies = []
 
 [project.scripts]
 the-void = "the_void.main:main"
 
-[project.urls]
-Homepage = "https://github.com/0xSpuddy/the_void"
-Repository = "https://github.com/0xSpuddy/the_void"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.black]
-line-length = 88
-target-version = ['py38']
-
-[tool.isort]
-profile = "black"
-line_length = 88
-
-[tool.mypy]
-python_version = "3.8"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
+[tool.uv]
+dev-dependencies = []
