contracts working sending ECHO to shouters! huzzah

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ void-app/.env
 node_modules
 .env
 backend/__pycache__/get_data_before.cpython-312.pyc
-__pycache__/
+**/__pycache__/
+uv.lock
+**/artifacts/
